<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_view"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:onClick="switchView"
        tools:ignore="RelativeOverlap,UsingOnClickInXml,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/save"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck,UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="clear"
            android:text="@string/clear"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck,UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="rename"
            android:text="@string/rename"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck,UsingOnClickInXml" />
    </LinearLayout>
</RelativeLayout>